# memo-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  styles.css
assets/: login.css  main.css
src/: app.rs  components.rs  config.rs  lib.rs  main.rs  router.rs  rpc.rs  session.rs  storage.rs  styles.css  wallet.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: complete_step.rs  initial_step.rs  login.rs  mnemonic_modal.rs  mod.rs  password_modal.rs  pixel_canvas.rs  set_password_step.rs  show_mnemonic_step.rs  verify_mnemonic_step.rs  wallet_address_display.rs
src/core/: backpack.rs  cache.rs  constants.rs  encrypt.rs  img2hex.rs  memo.rs  mod.rs  network_config.rs  pixel.rs  profile_cache.rs  rpc.rs  rpc_base.rs  rpc_blog.rs  rpc_burn.rs  rpc_chat.rs  rpc_domain.rs  rpc_forum.rs  rpc_mint.rs  rpc_profile.rs  rpc_project.rs  rpc_tests.rs  rpc_token.rs  rpc_transfer.rs  session.rs  settings.rs  storage.rs  storage_base.rs  storage_burn.rs  storage_mint.rs  token_rpc.rs  transaction.rs  wallet.rs  x1.rs
src/handlers/: mint_handlers.rs  mod.rs  transaction_handlers.rs  wallet_handlers.rs
src/login/: backpack_connect_step.rs  complete_step.rs  import_mnemonic_step.rs  initial_step.rs  lock_screen.rs  login_complete_step.rs  login_initial_step.rs  login_step.rs  mod.rs  set_password_step.rs  show_mnemonic_step.rs  verify_mnemonic_step.rs  x1_connect_step.rs
src/pages/: blog_page.rs  burn_form.rs  burn_onchain.rs  burn_page.rs  canvas_pixel_view.rs  chat_page.rs  dashboard_page.rs  faucet_page.rs  forum_page.rs  home.rs  home_page.rs  log_view.rs  main_page.rs  memo_card.rs  memo_card_details.rs  miner_page.rs  mint_form.rs  mint_page.rs  mint_page_legacy.rs  mod.rs  not_found.rs  pixel_view.rs  profile_page.rs  project_page.rs  settings_page.rs  transfer_page.rs
src/routes/: home.rs  mod.rs  not_found.rs
src/screens/: import_wallet.rs  login.rs  main_screen.rs  mod.rs  new_wallet.rs  password_dialog.rs
src/screens/panels/: inscription.rs  mod.rs  panel_a.rs  panel_b.rs  settings_panel.rs
src/services/: balance_service.rs  mod.rs
styles/: blog_page.css  burn_form.css  burn_onchain.css  burn_page.css  canvas_pixel_view.css  chat_page.css  faucet_page.css  forum_page.css  global.css  home_page.css  lock_screen.css  log_view.css  login.css  main_page.css  memo_card.css  memo_card_details.css  mint_form.css  mint_page.css  pixel_view.css  profile_page.css  project_page.css  settings_page.css
