[package]
name = "memo-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
bip39 = "2.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4"
argon2 = "0.5.2"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Storage", 
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Navigator",
    "Clipboard",
    "Headers",
    "File",
    "FileReader",
    "FileList",
    "Blob",
    "HtmlInputElement",
    "Document",
    "ProgressEvent"
] }
pbkdf2 = "0.11"
hmac = "0.12"
sha2 = "0.10"
bs58 = "0.5"
solana-sdk = "2.2.1"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
secrecy = "0.8"
gloo-utils = "0.2"
base64 = "0.13"
log = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[workspace]
members = ["src-tauri"]
